--- a/quickstart/config.toml
+++ b/quickstart/config.toml
@@ -2,3 +2,8 @@ baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "ananke"
+
+[[deployment.targets]]
+
+name = "awsbucket"
+URL = "s3://hugo-cd-bucket/?region=us-east-2"
